--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <meta charset="utf-8">
         <title>Odin Recipes</title>
     </head>
+
     <body>
         <h1>Stardew Valley Recipes</h1>
+        <ul>
+            <li><a href="recipes/pizza.html">Pizza</a>
     </body>
 </html>
