--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <body>
         <h1>Stardew Valley Recipes</h1>
         <ul>
-            <li><a href="recipes/pizza.html">Pizza</a>
+            <li><a href="recipes/pizza.html">Pizza</a></li>
+            <li><a href="recipes/blackberry-cobbler.html">Blackberry Cobbler</a></li>
+            <li><a href="recipes/red-plate.html">Red Plate</a></li>
+            <li><a href="recipes/roots-platter.html">Roots Platter</a></li>
     </body>
 </html>
