Added images to all four recipes in forlder

--- a/recipes/blackberry-cobbler.html
+++ b/recipes/blackberry-cobbler.html
@@ -7,5 +7,6 @@
 
     <body>
         <h1>Blackberry Cobbler</h1>
+        <img src="../images/Blackberry_Cobbler.png" alt="Image of Blackberry Cobbler from Stardew Valley">
     </body>
 </html>
