--- a/recipes/red-plate.html
+++ b/recipes/red-plate.html
@@ -7,5 +7,6 @@
 
     <body>
         <h1>Red Plate</h1>
+        <img src="../images/Red_Plate.png" alt="Image of Red Plate food from Stardew Valley">
     </body>
 </html>
