--- a/recipes/roots-platter.html
+++ b/recipes/roots-platter.html
@@ -7,5 +7,6 @@
 
     <body>
         <h1>Roots Platter</h1>
+        <img src="../images/Roots_Platter.png" alt="Image of Roots Platter from Staredew Valley">
     </body>
 </html>
