--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Pizza</title>
     </head>
 
     <body>
         <h1>Pizza</h1>
+        <img src="../images/Pizza.png" alt="Image of Pizza from Stardew Valley">
     </body>
 </html>
