Recipes and index.html edited
added new Stardew Logo to index.html, Ingrediants and Info added to all Recipes as well as back button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <img src="images/Stardew Logo.png" height="300" width="350" alt="Stardew Valley Logo with Chicken">
         <h1>Stardew Valley Recipes</h1>
         <ul>
             <li><a href="recipes/pizza.html">Pizza</a></li>
