--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,5 +8,26 @@
     <body>
         <h1>Pizza</h1>
         <img src="../images/Pizza.png" alt="Image of Pizza from Stardew Valley">
+        <h3><em>It's popular for all the right reasons</em></h3>
+            <p><strong>Pizza</strong> is a cooked dish. You can prepare this dish in the kitchen of your home when you have the upgraded farmhouse.</p>
+            <p>This recipe is unlocked by watching <strong>The Queen of Sauce</strong> on TV on the 7th of Spring in Year 2. Pizza can also be purchase daily at <strong>The Stardrop Sallon</strong> for 600g.</p>
+
+        <h2>Ingredients</h2>
+            <ul>
+                <li>1 Wheat Flour</li>
+                <li>1 Tomato</li>
+                <li>1 Cheese</li>
+            </ul>
+
+        <h2>Information</h2>
+            <ul>
+                <li>Buff(s) - <em>N/A</em></li>
+                <li>Energy - 150</li>
+                <li>Health - 67</li>
+                <li>Sell Price - 300g</li>
+            </ul>
+
+        <p><strong><a href="../index.html">Back Home</a></strong></p>
+
     </body>
 </html>
