--- a/recipes/red-plate.html
+++ b/recipes/red-plate.html
@@ -8,5 +8,26 @@
     <body>
         <h1>Red Plate</h1>
         <img src="../images/Red_Plate.png" alt="Image of Red Plate food from Stardew Valley">
+        <h3><em>Full of antioxidents</em></h3>
+            <p><strong>Red Plate</strong> is a cooked dish. You can prepare this dish in the kitchen of your home when you have the upgraded farmhouse.</p>
+            <p>This recipe is given by the Villager Emily, to obtain it you must get Emily to reach the friendship level of 7 hearts.</p>
+
+        <h2>Ingredients</h2>
+            <ul>
+                <li>1 Radish</li>
+                <li>1 Red Cabbage</li>
+            </ul>
+
+        <h2>Information</h2>
+            <ul>
+                <li>Buff(s) - Max Energy (+50)</li>
+                <li>Buff Duration - 3m 30s</li>
+                <li>Energy - 240</li>
+                <li>Health - 108</li>
+                <li>Sell Price - 400g</li>
+            </ul>
+
+        <p><strong><a href="../index.html">Back Home</a></strong></p>
+
     </body>
 </html>
