--- a/recipes/blackberry-cobbler.html
+++ b/recipes/blackberry-cobbler.html
@@ -8,5 +8,27 @@
     <body>
         <h1>Blackberry Cobbler</h1>
         <img src="../images/Blackberry_Cobbler.png" alt="Image of Blackberry Cobbler from Stardew Valley">
+        <h3><em>There's nothing quite like it</em></h3>
+            <p><strong>Blackberry Cobbler</strong> is a cooked dish. You can prepare this dish in the kitchen of your home when you have the upgraded farmhouse.</p>
+            <p>This recipe is unlocked by watching <strong>The Queen of Sauce</strong> on TV on the 14th day of Fall in Year 2.<br>
+            It can also be randomly given as a gift at the <strong>Feast of the Winter Star</strong> festival that will take place on the 25th of every Winter.</p>
+
+        <h2>Ingredients</h2>
+            <ul>
+                <li>2 BlackBerry</li>
+                <li>1 Sugar</li>
+                <li>1 Wheat Flour</li>
+            </ul>
+
+        <h2>Information</h2>
+            <ul>
+                <li>Buff(s) - <em>N/A</em></li>
+                <li>Energy - 175</li>
+                <li>Health - 78</li>
+                <li>Sell Price - 260g</li>
+            </ul>
+         
+        <p><strong><a href="../index.html">Back Home</a></strong></p>
+
     </body>
 </html>
