--- a/recipes/roots-platter.html
+++ b/recipes/roots-platter.html
@@ -8,5 +8,27 @@
     <body>
         <h1>Roots Platter</h1>
         <img src="../images/Roots_Platter.png" alt="Image of Roots Platter from Staredew Valley">
+        <h3><em>This'll get you digging fore more</em></h3>
+            <p><strong>Roots Platter</strong> is a cooked dish. You can prepare this dish in the kitchen of your home when you have the upgraded farmhouse.</p>
+            <p>This recipe is unlocked after reaching Level 3 in the Combat skill. It can also randomly be found in both the <strong>Volcano Dungeon shop</strong> and <strong>Krobus' shop</strong> on Saturdays.<br>
+                It is also possible to find 5 <strong>Roots Platter</strong> in a treasure room in the <strong>Skull Cavern</strong>.</p>
+
+        <h2>Ingrediants</h2>
+            <ul>
+                <li>1 Cave Carrot</li>
+                <li>1 Winter Root</li>
+            </ul>
+        
+        <h2>Information</h2>
+            <ul>
+                <li>Buff(s) - Attack (+3)</li>
+                <li>Buff Duration - 5m 35s</li>
+                <li>Energy - 125</li>
+                <li>Health - 56</li>
+                <li>Sell Price - 100g</li>
+            </ul>
+
+        <p><strong><a href="../index.html">Back Home</a></strong></p>
+
     </body>
 </html>
