Small spelling fixes

--- a/recipes/blackberry-cobbler.html
+++ b/recipes/blackberry-cobbler.html
@@ -15,7 +15,7 @@
 
         <h2>Ingredients</h2>
             <ul>
-                <li>2 BlackBerry</li>
+                <li>2 Blackberry</li>
                 <li>1 Sugar</li>
                 <li>1 Wheat Flour</li>
             </ul>
