--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -10,7 +10,7 @@
         <img src="../images/Pizza.png" alt="Image of Pizza from Stardew Valley">
         <h3><em>It's popular for all the right reasons</em></h3>
             <p><strong>Pizza</strong> is a cooked dish. You can prepare this dish in the kitchen of your home when you have the upgraded farmhouse.</p>
-            <p>This recipe is unlocked by watching <strong>The Queen of Sauce</strong> on TV on the 7th of Spring in Year 2. Pizza can also be purchase daily at <strong>The Stardrop Sallon</strong> for 600g.</p>
+            <p>This recipe is unlocked by watching <strong>The Queen of Sauce</strong> on TV on the 7th of Spring in Year 2. Pizza can also be purchase daily at <strong>The Stardrop Saloon</strong> for 600g.</p>
 
         <h2>Ingredients</h2>
             <ul>
