--- a/recipes/roots-platter.html
+++ b/recipes/roots-platter.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Roots Platter</h1>
         <img src="../images/Roots_Platter.png" alt="Image of Roots Platter from Staredew Valley">
-        <h3><em>This'll get you digging fore more</em></h3>
+        <h3><em>This'll get you digging for more</em></h3>
             <p><strong>Roots Platter</strong> is a cooked dish. You can prepare this dish in the kitchen of your home when you have the upgraded farmhouse.</p>
             <p>This recipe is unlocked after reaching Level 3 in the Combat skill. It can also randomly be found in both the <strong>Volcano Dungeon shop</strong> and <strong>Krobus' shop</strong> on Saturdays.<br>
                 It is also possible to find 5 <strong>Roots Platter</strong> in a treasure room in the <strong>Skull Cavern</strong>.</p>
