CSS folder and file created
background color added to css for test

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="styles.css">
         <meta charset="utf-8">
         <title>Odin Recipes</title>
     </head>
 
     <body>
+        <div class="mainbackground"> 
         <img src="images/Stardew Logo.png" height="300" width="350" alt="Stardew Valley Logo with Chicken">
         <h1>Stardew Valley Recipes</h1>
         <ul>
