index, recipes, and css files updated
backgrounds added to each webpage as well as aligned text and images

--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="CSS-folder/styles.css">
         <meta charset="utf-8">
         <title>Odin Recipes</title>
     </head>
 
     <body>
-        <div class="mainbackground"> 
-        <img src="images/Stardew Logo.png" height="300" width="350" alt="Stardew Valley Logo with Chicken">
-        <h1>Stardew Valley Recipes</h1>
-        <ul>
-            <li><a href="recipes/pizza.html">Pizza</a></li>
-            <li><a href="recipes/blackberry-cobbler.html">Blackberry Cobbler</a></li>
-            <li><a href="recipes/red-plate.html">Red Plate</a></li>
-            <li><a href="recipes/roots-platter.html">Roots Platter</a></li>
+        <img src="images/Stardew Logo.png" class="logo" alt="Stardew Valley Logo with Chicken">
+        <h1>My Favorite Stardew Valley Recipes</h1>
+            <a href="recipes/pizza.html">Pizza</a><br>
+            <a href="recipes/blackberry-cobbler.html">Blackberry Cobbler</a><br>
+            <a href="recipes/red-plate.html">Red Plate</a><br>
+            <a href="recipes/roots-platter.html">Roots Platter</a><br>
+        
     </body>
 </html>
