--- a/recipes/roots-platter.html
+++ b/recipes/roots-platter.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Roots Platter</title>
+        <link rel="stylesheet" href="../CSS-folder/styles.css">
     </head>
 
     <body>
