--- a/recipes/blackberry-cobbler.html
+++ b/recipes/blackberry-cobbler.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Blackberry Cobbler</title>
+        <link rel="stylesheet" href="../CSS-folder/styles.css">
     </head>
 
     <body>
