--- a/recipes/red-plate.html
+++ b/recipes/red-plate.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Red Plate</title>
+        <link rel="stylesheet" href="../CSS-folder/styles.css">
     </head>
 
     <body>
