Images and Recipes folder updated as well as new CSS styles
added multiple images to use for recipe webpages as well as new border and font sizes implemented

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <body>
         <img src="images/Stardew Logo.png" class="logo" alt="Stardew Valley Logo with Chicken">
         <h1>My Favorite Stardew Valley Recipes</h1>
-            <a href="recipes/pizza.html">Pizza</a><br>
+            <p><a href="recipes/pizza.html">Pizza</a><br>
             <a href="recipes/blackberry-cobbler.html">Blackberry Cobbler</a><br>
             <a href="recipes/red-plate.html">Red Plate</a><br>
-            <a href="recipes/roots-platter.html">Roots Platter</a><br>
+            <a href="recipes/roots-platter.html">Roots Platter</a><br></p>
         
     </body>
 </html>
