--- a/recipes/red-plate.html
+++ b/recipes/red-plate.html
@@ -7,11 +7,14 @@
     </head>
 
     <body>
+        <div class="border">
         <h1>Red Plate</h1>
         <img src="../images/Red_Plate.png" alt="Image of Red Plate food from Stardew Valley">
         <h3><em>Full of antioxidents</em></h3>
-            <p><strong>Red Plate</strong> is a cooked dish. You can prepare this dish in the kitchen of your home when you have the upgraded farmhouse.</p>
+
+            <div class="left"><p class="disc"><strong>Red Plate</strong> is a cooked dish. You can prepare this dish in the kitchen of your home when you have the upgraded farmhouse.</p>
             <p>This recipe is given by the Villager Emily, to obtain it you must get Emily to reach the friendship level of 7 hearts.</p>
+            </div>
 
         <h2>Ingredients</h2>
             <ul>
@@ -29,6 +32,7 @@
             </ul>
 
         <p><strong><a href="../index.html">Back Home</a></strong></p>
+        </div>
 
     </body>
 </html>
