--- a/recipes/roots-platter.html
+++ b/recipes/roots-platter.html
@@ -7,13 +7,14 @@
     </head>
 
     <body>
+        <div class="border">
         <h1>Roots Platter</h1>
         <img src="../images/Roots_Platter.png" alt="Image of Roots Platter from Staredew Valley">
         <h3><em>This'll get you digging for more</em></h3>
-            <p><strong>Roots Platter</strong> is a cooked dish. You can prepare this dish in the kitchen of your home when you have the upgraded farmhouse.</p>
-            <p>This recipe is unlocked after reaching Level 3 in the Combat skill. It can also randomly be found in both the <strong>Volcano Dungeon shop</strong> and <strong>Krobus' shop</strong> on Saturdays.<br>
+            <div class="left"><p class="disc"><strong>Roots Platter</strong> is a cooked dish. You can prepare this dish in the kitchen of your home when you have the upgraded farmhouse.<br>
+            This recipe is unlocked after reaching Level 3 in the Combat skill. It can also randomly be found in both the <strong>Volcano Dungeon shop</strong> and <strong>Krobus' shop</strong> on Saturdays.<br>
                 It is also possible to find 5 <strong>Roots Platter</strong> in a treasure room in the <strong>Skull Cavern</strong>.</p>
-
+            </div>
         <h2>Ingrediants</h2>
             <ul>
                 <li>1 Cave Carrot</li>
@@ -30,6 +31,7 @@
             </ul>
 
         <p><strong><a href="../index.html">Back Home</a></strong></p>
+        <div>
 
     </body>
 </html>
