Multiple CSS cmds added and removed, Recipe files updated to match
Border/table added for info/ing area of each page as well as images, new css added and old removed

--- a/index.html
+++ b/index.html
@@ -9,10 +9,24 @@
     <body>
         <img src="images/Stardew Logo.png" class="logo" alt="Stardew Valley Logo with Chicken">
         <h1>My Favorite Stardew Valley Recipes</h1>
-            <p><a href="recipes/pizza.html">Pizza</a><br>
-            <a href="recipes/blackberry-cobbler.html">Blackberry Cobbler</a><br>
-            <a href="recipes/red-plate.html">Red Plate</a><br>
-            <a href="recipes/roots-platter.html">Roots Platter</a><br></p>
-        
+           <table id="table">
+            <tr>
+                <td><img src="images/Pizza.png" height="48px" width="48px" alt="Image of Pizza from Stardew Valley"></td>
+                <th><a href="recipes/pizza.html">Pizza</a></th>
+            </tr>
+            <tr>
+                <td><img src="images/Blackberry_Cobbler.png" height="48px" width="48px" alt="Image of Blackberry Cobbler from Stardew Valley"></td>
+                <th><a href="recipes/blackberry-cobbler.html">Blackberry Cobbler</a></th>
+            </tr>
+            <tr>
+                <td><img src="images/Red_Plate.png" height="48px" width="48px" alt="Image of Red Plate from Stardew Valley"></td>
+                <th><a href="recipes/red-plate.html">Red Plate</a></th>
+            </tr>
+            <tr>
+                <td><img src="images/Roots_Platter.png" height="48px" width="48px" alt="Image of Roots Platter from Stardew Valley"></td>
+                <th><a href="recipes/roots-platter.html">Roots Platter</a></th>
+            </tr>
+        </table>
+
     </body>
 </html>
