--- a/recipes/red-plate.html
+++ b/recipes/red-plate.html
@@ -12,26 +12,51 @@
         <img src="../images/Red_Plate.png" alt="Image of Red Plate food from Stardew Valley">
         <h3><em>Full of antioxidents</em></h3>
 
-            <div class="left"><p class="disc"><strong>Red Plate</strong> is a cooked dish. You can prepare this dish in the kitchen of your home when you have the upgraded farmhouse.</p>
-            <p>This recipe is given by the Villager Emily, to obtain it you must get Emily to reach the friendship level of 7 hearts.</p>
+            <div class="left" class="disc"><p><strong>Red Plate</strong> is a cooked dish. You can prepare this dish in the kitchen of your home when you have the upgraded farmhouse.<br>
+            This recipe is given by the Villager Emily, to obtain it you must get Emily to reach the friendship level of 7 hearts.</p>
             </div>
 
-        <h2>Ingredients</h2>
-            <ul>
-                <li>1 Radish</li>
-                <li>1 Red Cabbage</li>
-            </ul>
+            <table id="table">
+                <tr>
+                    <th colspan="2" class="infoheader"><h2><u>Ingredients</u></h2></th>
+                </tr>
+                <tr>
+                    <th class="infotitles">(1) Radish</th>
+                    <td><img src="../images/Radish.png" height="30px" width="30px" alt="Radish"></td>
+                </tr>
+                <tr>
+                    <th class="infotitles">(1) Red Cabbage</th>
+                    <td><img src="../images/Red_Cabbage.png" height="30px" width="30px" alt="Red Cabbage"></td>
+                </tr>
+            </table>
 
-        <h2>Information</h2>
-            <ul>
-                <li>Buff(s) - Max Energy (+50)</li>
-                <li>Buff Duration - 3m 30s</li>
-                <li>Energy - 240</li>
-                <li>Health - 108</li>
-                <li>Sell Price - 400g</li>
-            </ul>
+            <table id="table">
+                <tr>
+                    <th colspan="2" class="infoheader"><h2><u>Information</u></h2></th>
+                </tr>
+                <tr>
+                    <th class="infotitles">Buff(s)</th>
+                    <td><img src="../images/24px-Max_Energy.png" height="20px" width="20px" alt="Max Energy.png">Max Energy (+50)</td>
+                </tr>
+                <tr>
+                    <th class="infotitles">Buff Duration</th>
+                    <td><img src="../images/24px-Time_Icon.png" height="20px" width="20px" alt="Small clock"> 3m 30s</td>
+                </tr>
+                <tr>
+                    <th class="infotitles">Energy</th>
+                    <td><img src="../images/20px-Energy.png" height="20px" width="20px" alt="Green plus symbol for Energy">240</td>
+                </tr>
+                <tr>
+                    <th class="infotitles">Health</th>
+                    <td><img src="../images/20px-Health.png" height="20px" width="20px" alt="Red letter H for Health">108</td>
+                </tr>
+                <tr>
+                    <th class="infotitles">Sell Price</th>
+                    <td><img src="../images/18px-Gold.png" height="20px" width="20px" alt="Gold coin"> 400g</td>
+                </tr>
+            </table>
 
-        <p><strong><a href="../index.html">Back Home</a></strong></p>
+        <p><strong><a href="../index.html" class="button">Back Home</a></strong></p>
         </div>
 
     </body>
