--- a/recipes/roots-platter.html
+++ b/recipes/roots-platter.html
@@ -11,26 +11,54 @@
         <h1>Roots Platter</h1>
         <img src="../images/Roots_Platter.png" alt="Image of Roots Platter from Staredew Valley">
         <h3><em>This'll get you digging for more</em></h3>
-            <div class="left"><p class="disc"><strong>Roots Platter</strong> is a cooked dish. You can prepare this dish in the kitchen of your home when you have the upgraded farmhouse.<br>
-            This recipe is unlocked after reaching Level 3 in the Combat skill. It can also randomly be found in both the <strong>Volcano Dungeon shop</strong> and <strong>Krobus' shop</strong> on Saturdays.<br>
-                It is also possible to find 5 <strong>Roots Platter</strong> in a treasure room in the <strong>Skull Cavern</strong>.</p>
-            </div>
-        <h2>Ingrediants</h2>
-            <ul>
-                <li>1 Cave Carrot</li>
-                <li>1 Winter Root</li>
-            </ul>
-        
-        <h2>Information</h2>
-            <ul>
-                <li>Buff(s) - Attack (+3)</li>
-                <li>Buff Duration - 5m 35s</li>
-                <li>Energy - 125</li>
-                <li>Health - 56</li>
-                <li>Sell Price - 100g</li>
-            </ul>
 
-        <p><strong><a href="../index.html">Back Home</a></strong></p>
+            <div class="left" class="disc"><p><strong>Roots Platter</strong> is a cooked dish. You can prepare this dish in the kitchen of your home when you have the upgraded farmhouse.<br>
+            This recipe is unlocked after reaching Level 3 in the Combat skill. It can also randomly be found in both the <strong>Volcano Dungeon shop</strong> and <strong>Krobus' shop</strong> on Saturdays.<br>
+            It is also possible to find 5 <strong>Roots Platter</strong> in a treasure room in the <strong>Skull Cavern</strong>.</p>
+            </div>
+
+            <table id="table">
+                <tr>
+                    <th colspan="2" class="infoheader"><h2><u>Ingredients</u></h2></th>
+                </tr>
+                <tr>
+                    <th class="infotitles">(1) Cave Carrot</th>
+                    <td><img src="../images/Cave_Carrot.png" height="30px" width="30px" alt="Cave Carrot"></td>
+                </tr>
+                <tr>
+                    <th class="infotitles">(1) Winter Root</th>
+                    <td><img src="../images/Winter_Root.png" height="30px" width="30px" alt="Winter Root"></td>
+                </tr>
+            </table>
+            
+
+            <table id="table">
+                <tr>
+                    <th colspan="2" class="infoheader"><h2><u>Information</u></h2></th>
+                </tr>
+                <tr>
+                    <th class="infotitles">Buff(s)</th>
+                    <td><img src="../images/24px-Attack.png" height="20px" width="20px" alt="Pixel Sword">Attack (+3)</td>
+                </tr>
+                <tr>
+                    <th class="infotitles">Buff Duration</th>
+                    <td><img src="../images/24px-Time_Icon.png" height="20px" width="20px" alt="Small clock"> 5m 35s</td>
+                </tr>
+                <tr>
+                    <th class="infotitles">Energy</th>
+                    <td><img src="../images/20px-Energy.png" height="20px" width="20px" alt="Green plus symbol for Energy">125</td>
+                </tr>
+                <tr>
+                    <th class="infotitles">Health</th>
+                    <td><img src="../images/20px-Health.png" height="20px" width="20px" alt="Red letter H for Health">56</td>
+                </tr>
+                <tr>
+                    <th class="infotitles">Sell Price</th>
+                    <td><img src="../images/18px-Gold.png" height="20px" width="20px" alt="Gold coin"> 100g</td>
+                </tr>
+            </table>
+
+        <p><strong><a href="../index.html" class="button">Back Home</a></strong></p>
         <div>
 
     </body>
